////////////////////////////////////////
// CHANGELOG 2.2.5-2.2.6 ///////////////
////////////////////////////////////////

****************************************
* Neue Funktionen / Änderungen *********
****************************************


****************************************
* Behobene Fehler **********************
****************************************

Aliasverwaltung
- Es können nun Aliase für Inhaltsseiten mit dem Schlüsselwort "require" definiert werden.

Shop
- Die Versandart wird im Frontend korrekt gesetzt, wenn nur eine definiert ist